--- a/.github/workflows/dagger.yaml
+++ b/.github/workflows/dagger.yaml
@@ -7,6 +7,9 @@ jobs:
   build:
     name: build
     runs-on: ubuntu-latest
+    env:
+      DAGGER_CACHE_FROM: type=gha,scope=dagger-cache-example
+      DAGGER_CACHE_TO: type=gha,mode=max,scope=dagger-cache-example
     steps:
       - uses: actions/setup-node@v3
         with:
