--- a/.github/workflows/dagger.yaml
+++ b/.github/workflows/dagger.yaml
@@ -14,7 +14,10 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - uses: actions/checkout@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Checkout Repo
+        uses: actions/checkout@v3
       - name: Install deps
         run: npm ci
       - name: Run Dagger pipeline
