--- a/.github/workflows/dagger.yaml
+++ b/.github/workflows/dagger.yaml
@@ -14,11 +14,23 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
       - name: Checkout Repo
         uses: actions/checkout@v3
       - name: Install deps
         run: npm ci
       - name: Run Dagger pipeline
         run: node --trace-warnings --loader ts-node/esm ./build.ts
+      - # Temp fix
+        # https://github.com/docker/build-push-action/issues/252
+        # https://github.com/moby/buildkit/issues/1896
+        name: Move cache
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
